[package]
name = "curve25519-dalek"
# Before incrementing:
# - update CHANGELOG
# - update html_root_url
# - update README if required by semver
version = "3.0.2"
authors = ["Isis Lovecruft <isis@patternsinthevoid.net>",
           "Henry de Valence <hdevalence@hdevalence.ca>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/dalek-cryptography/curve25519-dalek"
homepage = "https://dalek.rs/curve25519-dalek"
documentation = "https://docs.rs/curve25519-dalek"
categories = ["cryptography", "no-std"]
keywords = ["cryptography", "crypto", "ristretto", "curve25519", "ristretto255"]
description = "A pure-Rust implementation of group operations on ristretto255 and Curve25519"
exclude = [
    "**/.gitignore",
    ".gitignore",
    ".travis.yml",
]

[dependencies]
byteorder = { version = "^1.2.3", default-features = false, features = ["i128"] }
digest = { version = "0.9", default-features = false }
serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }
packed_simd = { version = "0.3.4", package = "packed_simd_2", features = ["into_bits"], optional = true }
zeroize = { version = "1", default-features = false }
subtle = { version = "^2.2.1", default-features = false }

[features]
default = ["u64_backend"]

# The u32 backend uses u32s with u64 products.
u32_backend = []

u64_backend = []
